kubernetes/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmproject-be-api-dev
  namespace: vm-project-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vmproject-be-api-dev
  template:
    metadata:
      labels:
        app: vmproject-be-api-dev
    spec:
      containers:
      - name: vmproject-be-api-dev
        image: rcr.citwdd.net/database-repository/database-vima:latest
        ports:
        - containerPort: 80        
        resources:
          limits:
            cpu: ".5"
            memory: "500Mi"
          requests:
            cpu: ".25"
            memory: "250Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
      imagePullSecrets:
      - name: database-rcr-secret           
---
apiVersion: v1
kind: Service
metadata:
  name: vmproject-be-api-dev
  namespace: vm-project-dev
spec:
  selector:
    app: vmproject-be-api-dev
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80    
---
apiVersion: v1
kind: Service
metadata:
  name: vmproject-be-api-dev-nodeport
  namespace: vm-project-dev
spec:
  selector:
    app: vmproject-be-api-dev
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vmproject-be-dev-ingress
  namespace: vm-project-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer"
spec:
  tls:
  - hosts:
    - rancher-dev-be-api.citwdd.net
    secretName: dev-vm-be-api-tls
  rules:
  - host: rancher-dev-be-api.citwdd.net
    http:
      paths:
      - backend:
          serviceName: vmproject-be-api-dev-nodeport
          servicePort: 80
